WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256098
REGRESSION (
263465@main
) Crash when scrolling on Twitter.com
https://bugs.webkit.org/show_bug.cgi?id=256098
Summary
REGRESSION (263465@main) Crash when scrolling on Twitter.com
Chris Dumez
Reported
2023-04-28 11:22:50 PDT
Crash when scrolling on Twitter.com since
263465@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-04-28 11:22:59 PDT
<
rdar://108666748
>
Chris Dumez
Comment 2
2023-04-28 11:36:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13280
EWS
Comment 3
2023-04-28 12:59:35 PDT
Committed
263512@main
(1b9b42dc28d8): <
https://commits.webkit.org/263512@main
> Reviewed commits have been landed. Closing PR #13280 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug