REGRESSION (263465@main) Crash when scrolling on Twitter.com https://bugs.webkit.org/show_bug.cgi?id=256098 rdar://108666748

Reviewed by Wenson Hsieh.

263465@main dropped an isEmpty() checks for the languages vector and this
caused an out-of-bounds accesses later on.

* Source/WebKit/GPUProcess/GPUProcess.cpp:
(WebKit::GPUProcess::initializeGPUProcess):

Canonical link: https://commits.webkit.org/263512@main